--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,6 +12,43 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.resource-form {
+  margin-top: 100px;
+}
+
+.active-resource {
+  background-color: #3140aa;
+  padding: 50px;
+  text-align: center;
+  color: white;
+  height: 300px;
+}
+
+.active-resource .resource-name {
+  font-size: 30px;
+  height: 50px;
+}
+
+.active-resource .elapsed-time {
+  font-size: 64px;
+  font-weight: bold;
+}
+
+.active-resource .time-wrapper {
+  height: 100px;
+}
+
+.tag.resource-complete {
+  background-color: #0fd60f;
+}
+
+.tag.resource-active {
+  background-color: #2d8bff;
+}
+
+.tag.resource-inactive {
+  background-color: orange;
 }
 
 @media (prefers-color-scheme: dark) {
